--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         window.location.href= link[tags.indexOf(t_array[0].toLowerCase())] + t_array.slice(1).join('+');
        }
        else{
-        window.location.href= link[0] + t_array.slice(1).join('+');
+        window.location.href= link[0] + t_array.join('+');
        }
     }
     </script>
