adding analytics.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <header>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y7QNGKQWTZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y7QNGKQWTZ');
+</script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
     <div class="container">
