--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
               <h3>Sandbox Innovation Lab</h3>
               <p class="position">● Inventory head</p>
               <p class="experience-dates">Aug 2023 - present</p>
-              <p class="experience-description">Lead the Robotic Arm Subsystem in Project Kratos</p>
+              <p class="experience-description">Head of committee in Sandbox lab which is BITS Goa's innovation incubation Center 
+</p>
               <p class="position">● Committee Member</p>
               <p class="experience-dates">Jan 2023 - Aug 2023</p>
             </div>
