--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="project-grid">
             <!-- Example Project Entry -->
             <div class="project-entry">
-                <img src="assets/kratos1.jpg" alt="Project Kratos" class="project-image">
+                <img src="assets/kratos1.JPG" alt="Project Kratos" class="project-image">
                 <div class="project-details">
                     <h3>Project Kratos - Mars Rover</h3>
                     <p>Robotic Arm Subsystem lead (2022 - present). Developed a 5 DoF robotic arm with custom PID controller and inverse kinematics.</p>
